[package]
name = "watchrs"
version = "0.2.1"

authors = ["Michael Habib <mhabib@pixability.com>"]
edition = "2018"

description = "Crate that aids in monitoring and setting up alerts for AWS Batch Jobs."
documentation = "https://docs.rs/watchrs"
homepage = "https://github.com/itsHabib/watchrs"
repository = "https://github.com/itsHabib/watchrs.git"
readme = "README.md"

keywords = ["aws", "batch", "cloudwatch-events", "sns"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "itsHabib/watchrs" }
maintenance = { status = "passively-maintained" }

[lib]
name = "watchrs"
path = "src/lib.rs"

[dependencies]
rusoto_core = "0.38.0"
rusoto_events = "0.38.0"
rusoto_sns = "0.38.0"
chrono = "0.4.6"
env_logger = "0.6.1"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
